--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -148,15 +148,30 @@ h1 {
 
 /* Bottom right text */
 .text-block {
-  position: ;
+  position: static;
   bottom: 0;
   right: 0;
+  /* background: url("img/CodeGorilla_logo.png");
+  background-size: cover;
+  background-position: left; */
   background-color: rgb(103, 107, 167);
   color: white;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 120px;
   margin: 1em;
   border-radius: 5px;
+}
+
+#logo { 
+  float: left;
+  width: 40%;
+  height: auto;
+  
+}
+
+#logotext {
+  float: right;
+  width: 50%;
 }
