--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -1,80 +1,79 @@
 *{
-    font-family: 'Dosis', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  font-family: 'Dosis', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 /* =====NAVBAR====================== */
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    border: 0px solid #e7e7e7;
-    background-color: #110f05;
+ul.nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border: 0px solid #e7e7e7;
+  background-color: #110f05;
   }
   
-  li {
-    float: left;
+  li.nav {
+  float: left;
   }
   
-  li a {
-    display: block;
-    color: whitesmoke;
-    text-align: center;
-    padding: 14px 26px;
-    text-decoration: none;
-    font-size: 18px;
+  li.nav a {
+  display: block;
+  color: whitesmoke;
+  text-align: center;
+  padding: 14px 26px;
+  text-decoration: none;
+  font-size: 18px;
   }
   
-  li a:hover:not(.active) {
-    background-color: rgb(85, 76, 76);
+  li.nav a:hover:not(.active) {
+  background-color: rgb(85, 76, 76);
   }
   
-  li a.active {
-    color: white;
-    background-color: #4CAF50;
+  li.nav a.active {
+  color: white;
+  background-color: #4CAF50;
   }
 
 /* =====FRONT====================== */
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
   }
   
   .hero-image {
-    background-image: url("../img/big_three.jpg");
-    background-color: #46484b;
-    height: 700px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    filter: contrast(80%);
+  background-image: url("../img/big_three.jpg");
+  background-color: #46484b;
+  height: 700px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  filter: contrast(80%);
   }
   
   .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 75%;
-    left: 47%;
-    transform: translate(-50%, -50%);
-    color: black;
-    text-shadow: 0,5px 0,5px  #110f05;
+  text-align: center;
+  position: absolute;
+  top: 75%;
+  left: 47%;
+  transform: translate(-50%, -50%);
+  color: rgb(4, 199, 233);
+  text-shadow: 2px 2px black;
   }
 
 /* =====PORTFOLIO_HEAD====================== */
 
 .porthead {
-    background-image: linear-gradient(-90deg, rgba(101, 190, 206, 0.596),rgb(60, 134, 156));
-    color: black;
-    margin: px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    text-align: center;
-    text-shadow: 0,5px 0,5px #110f05;
+  background-image: linear-gradient(-90deg, rgba(101, 190, 206, 0.596),rgb(60, 134, 156));
+  color: black;
+  margin: px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
 }
 
 /* =====PORTFOLIO====================== */
@@ -110,7 +109,6 @@ h1 {
 .column {
   float: left;
   width: 33%;
-
 }
 
 /* Clear floats after rows */ 
@@ -130,14 +128,14 @@ h1 {
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 1000px) {
   .column {
-    width: 50%;
+  width: 50%;
   }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .column {
-    width: 100%;
+  width: 100%;
   }
 }
 
@@ -145,15 +143,11 @@ h1 {
   background-color: rgb(60, 134, 156);
 */
 
-
 /* Bottom right text */
 .text-block {
   position: static;
   bottom: 0;
   right: 0;
-  /* background: url("img/CodeGorilla_logo.png");
-  background-size: cover;
-  background-position: left; */
   background-color: rgb(103, 107, 167);
   color: white;
   padding-left: 20px;
@@ -168,10 +162,123 @@ h1 {
   float: left;
   width: 40%;
   height: auto;
-  
 }
 
 #logotext {
   float: right;
   width: 50%;
 }
+
+/* Skills */
+
+.column2 {
+  float: left;
+  width: 25%;
+  padding-left: 30px;
+  padding-top: 10px;
+}
+
+/* Clear floats after image containers */
+.row2::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+#htmltext {
+  padding-left: 20px;
+  font-weight: bold;
+}
+
+#csstext {
+  padding-left: 22px;
+  font-weight: bold;
+}
+
+#jstext {
+  padding-left: 9px;
+  font-weight: bold;
+}
+
+#phptext {
+  
+  padding-left: 47px;
+  font-weight: bold;
+}
+
+
+/* Contact */
+
+.skilhead {
+  background-image: linear-gradient(-90deg, rgba(101, 190, 206, 0.596),rgb(60, 134, 156));
+  color: black;
+  margin-top: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+}
+
+/* Contactform */
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: rgb(60, 134, 156);
+  color: white;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: rgba(45, 141, 158, 0.596);
+}
+
+.container {
+  border-radius: 5px;
+  background-color: rgba(101, 190, 206, 0.596);
+  padding: 20px;
+}
+
+/* Social Media */
+
+ul.social{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border: 0px solid #e7e7e7;
+  background-color: rgba(101, 190, 206, 0.596);
+  }
+
+li.social{
+  float: left;
+  padding: 1.2em;
+}
+
+#socialmedia a:link{
+  color: rgb(60, 134, 156);
+} 
+
+#socialmedia a:visited{
+  color: rgb(60, 134, 156);
+} 
+
+#socialmedia a:hover{
+  color: rgb(103, 107, 167);
+} 
+
+#socialmedia a:active{
+  color: rgb(60, 134, 156);
+} 
+
